# helpip

./: .gitignore  README.md  pyproject.toml
helpip_cli/: __init__.py  __main__.py  cli.py  config.py  conflict_report.py  db.py  diagnostics.py  download.py  manifest.py  markers.py  parsing.py  resolver.py  storage.py
helpip_cli/_vendored/: __init__.py  req.py
helpip_cli/_vendored/mixology/: assignment.py  constraint.py  failure.py  incompatibility.py  package.py  package_source.py  partial_solution.py  range.py  term.py  union.py  version_solver.py
helpip_cli/_vendored/semver/: __init__.py  empty_constraint.py  version.py  version_constraint.py  version_range.py  version_union.py
