[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helpip"
version = "0.1.0"
description = "AI dependency conflict detection CLI (PubGrub-based)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sanpayon" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "packaging>=24",
    "pyyaml>=6",
    "requests>=2.31",
]

# Project URLs will be populated once the source is published.
[project.urls]
"Homepage" = "https://github.com/Sanpayon/helpip"
"Data Source" = "https://github.com/Sanpayon/PyPI_AI_Essential_Dependencies"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
helpip = "helpip_cli.cli:main"

[tool.setuptools.packages.find]
include = ["helpip_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
